--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "firebase": "^9.7.0",
     "flowbite": "^1.4.4",
     "react": "^18.0.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.0.0",
     "react-firebase-hooks": "^5.0.3",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.4.10",
